[tool.poetry]
name = "munchlaxbot"
version = "0.1.0"
description = ""
authors = ["Alex Leu <mr.leu@ucla.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
discord = "^2.2.2"
langchain = "^0.0.153"
openai = "^0.27.5"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
